@@ -1,10 +1,3 @@
-/* override Noia fixed width/height */
-#foxreplacePreferences {
-  height: auto !important;
-  width: auto !important;
-  max-width: 1024px;
-}
-
 #substitutionListTreeChildren::-moz-tree-cell-text(exclusionUrl) {
   color: red;
 }
